--- a/.github/workflows/sqlserver2022-sdk-dbproject.yml
+++ b/.github/workflows/sqlserver2022-sdk-dbproject.yml
@@ -33,9 +33,7 @@ jobs:
     # Easier to use Github-hosted runner if updating in GitHub
     runs-on: self-hosted
 
-    # Steps to deploy the updates to Azure SQL Database
-    # To keep this example simple, the Firewall settings in the logical SQL Server allows access from Azure services and resources
-    # An alternative is to use the Azure Login GitHub Action https://github.com/marketplace/actions/azure-login
+    # Steps to deploy the updates to a SQL Server 2022 Database
     steps:
       - name: download artifact containing dacpac
         # Dowloads Data artifact to dacpac folder
